--- a/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
+++ b/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
@@ -52,6 +52,7 @@ suppressPackageStartupMessages({
   conflict_prefer("map", "purrr")
   conflict_prefer("count", "dplyr")
   conflicts_prefer(base::saveRDS)
+  conflicts_prefer(base::as.data.frame)
   conflicts_prefer(SingleCellExperiment::colData)
 })
 ```
@@ -67,13 +68,13 @@ suppressPackageStartupMessages({
 
 ```{r, setup}
 library(reticulate)
-use_condaenv("/Users/jr35/envs/scv_jupcon/", required = TRUE)
+use_condaenv("/software/team222/jr35/miniconda3/envs/scrublt/", required = TRUE)
 matplotlib <- reticulate::import("matplotlib")
 matplotlib$use("Agg", force = TRUE)
 
 
 sample_set = "Mali2"
-knitr::opts_knit$set(root.dir = '/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/Mali2')
+knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/')
 ```
 
 ### Common functions
@@ -96,7 +97,8 @@ initialize variable for the sample names
 ##Sample ID
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66") %>% sort()
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57") #%>% sort()
-sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
+# sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
+sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
 
 
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60") %>% sort()
@@ -113,51 +115,52 @@ sample_id_lst <- sample_name_nms
 ```
 
 
-```{r, results='hide'}
+```{r, results='hide', eval=FALSE}
 # list.files("data/processed/", pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)
 list.files("data/raw/", pattern = "filtered_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T)%>% 
   set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_')))
 ```
 
 Save paths to raw MSC files in list - also needed for soupX below
-```{r}
-all_msc_raw_paths <- list.files("data/raw/Pf/", pattern = "raw_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T)%>% 
-  set_names(nm = (str_remove_all(.,'data/raw/Pf//|/.*') %>% str_replace(., '/', '_'))) %>%
-  .[sample_id_lst]
+```{r, eval=F}
+all_msc_raw_paths <- list.files("/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/", pattern = "raw_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'/lustre.*Pf//|/outs.*') %>% str_replace(., '/', '_'))) %>%
+  .[irods_id_sk21_mdata_cln[, c("sample_nm", "irods_id")] %>% deframe() %>% .[sample_id_lst]] %>%
+  set_names(sample_id_lst)
 ```
 
-```{r}
+```{r, eval=FALSE}
 all_msc_filt<-map(sample_name_nms, ~readRDS(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/Mali2/data/processed/Pf/all_msc_filt_",.x,".RDS")))
 ```
 
 
-```{r}
-all_msc_filt <- all_msc_filt %>% set_names(sample_name_nms)
+```{r, eval=T}
+all_msc_filt <- readRDS("data/processed/Pf/all_msc_filt.RDS")
 ```
 
 
 ```{r}
 
-all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelim %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelim, "ale") ~ "Gametocytes", T ~ StagePrelim)) %>% count(stage_c_ag, Strain_DN))
+all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelimC %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelimC, "ale") ~ "Gametocytes", T ~ StagePrelimC)) %>% count(stage_c_ag, Strain_DN))
 
 ```
 
 
 ```{r}
 
-all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelim %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelim, "ale") ~ "Gametocytes", T ~ StagePrelim)) %>% count(stage_c_ag))
+all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelimC %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelimC, "ale") ~ "Gametocytes", T ~ StagePrelimC)) %>% count(stage_c_ag))
 
 ```
 
 ```{r}
 
-all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelim %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelim, "ale") ~ "Gametocytes", T ~ StagePrelim)) %>% count(stage_c_ag))
+all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelimC %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelimC, "ale") ~ "Gametocytes", T ~ StagePrelimC)) %>% count(stage_c_ag))
 
 ```
 
 ```{r}
 
-all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelim %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelim, "ale") ~ "Gametocytes", T ~ StagePrelim)) %>% count(stage_c_ag))
+all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePrelimC %in% c("Early trophozoite", "Late ring") ~ "Asexual", str_detect(StagePrelimC, "ale") ~ "Gametocytes", T ~ StagePrelimC)) %>% count(stage_c_ag))
 
 ```
 
@@ -172,15 +175,16 @@ soupo_kselect_list_pp <- readRDS("data/processed/Pf/soupo_kselect_list_pp.RDS")
 ### SoupX ambient transcript removal
 
 SoupX function
-```{r}
-get_SoupX <- function(data, path, seu_fun = seurat_norm_stand){
+```{r, eval=F}
+get_SoupX <- function(data, path){
   
   # data <- FindNeighbors(data, k.param = 20)
   # data <- FindClusters(data, resolution = 0.5)
   
   # print(DimPlot(data, group.by <- 'seurat_clusters'))
   
-  toc <- data@assays[["RNA"]]@counts
+  # toc <- data@assays[["RNA"]]@counts
+  toc <- data[["RNA"]]$counts
   
   tod <- Seurat::Read10X(paste0(path))
   tod@Dimnames[[1]] <- toc@Dimnames[[1]]
@@ -193,7 +197,7 @@ get_SoupX <- function(data, path, seu_fun = seurat_norm_stand){
   adjusted <- adjustCounts(sc)
   data <- CreateSeuratObject(adjusted)
   # data <- seurat_SCT(data)
-  data <- seu_fun(data)
+  data <- seurat_norm_stand(Seurat_object = data, hvg = 500)
   return(list(data, sc))
 }
 ```
@@ -201,9 +205,9 @@ get_SoupX <- function(data, path, seu_fun = seurat_norm_stand){
 
 Run soupX
 
-```{r }
+```{r , eval=F}
 # path = 'data/raw/MSC14/5736STDY11771546_DB52e_star/raw_feature_bc_matrix/'
-
+hvg =500
 # all_msc_nosct_supx_4_dblt <- pmap(list(all_msc_filt, all_msc_raw_paths), ~get_SoupX(..1, ..2))
 all_msc_nosct_supx_4_dblt <- pmap(list(all_msc_filt, all_msc_raw_paths), ~{
   tryCatch({
@@ -215,6 +219,33 @@ failed_supx <- names(all_msc_nosct_supx_4_dblt[map(all_msc_nosct_supx_4_dblt, ~c
 
 ```
 
+
+!!!NB - FARM CODE - DONT DELETE
+```{r, eval=F}
+## Run Soupx in farm
+```
+
+
+Read in soupx objects processed in farm
+FARM CODE
+```{r, message=F, warning=F}
+##Read BPcells matrices
+all_msc_nosct_supx_4_dblt <- list.files("data/processed/", pattern = "soupx_filt_seu_norm.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+  # .[sample_name] %>%
+  map(readRDS)
+```
+
+
+```{r , eval=T}
+failed_supx <- all_msc_nosct_supx_4_dblt %>% 
+  .[sample_name] %>%
+  names() %>%
+  is.na(.) %>%
+  sample_name[.]
+
+```
+
 Replace with unadjusted object if soupx not successful
 ```{r ,include=FALSE, message=FALSE, warning=FALSE}
 
@@ -223,61 +254,54 @@ Replace with unadjusted object if soupx not successful
 
 # all_msc_nosct_supx_4_dblt[failed_supx] <- all_msc_filt[failed_supx]
 # DefaultAssay(all_msc_nosct_supx_4_dblt[[failed_supx]]) <- "RNA"
-all_msc_nosct_supx_4_dblt[failed_supx] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx]]@assays$RNA@counts) %>% seurat_norm_stand() %>% list()
-
+all_msc_nosct_supx_4_dblt[failed_supx[1]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[1]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[1]]]@meta.data) %>% seurat_norm_stand(., hvg = 500) %>% list()
+all_msc_nosct_supx_4_dblt[failed_supx[2]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[2]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[2]]]@meta.data) %>% seurat_norm_stand(., hvg = 500) %>% list()
+all_msc_nosct_supx_4_dblt <- all_msc_nosct_supx_4_dblt %>% .[sample_name]
 ```
 
-Doublet detection is applied on the soup corrected counts as the correction seems to improve doublet detection
+
+
 ```{r , message=FALSE, warning=FALSE}
-map(all_msc_nosct_supx_4_dblt, ElbowPlot)
-
-
-```
-
-```{r}
-# pc_list <-list(4L,3L,4L, 5L, 12L)
-pc_list <-list(5L,3L,4L, 5L, 5L, 5L,3L,4L, 5L, 5L, 5L)
-pc_list <- list(rep(6L, length(sample_name_nms)))
-```
-
-#### Preprocess soup-corrected objects
-
-Find neighbours
-```{r}
-
-all_msc_nosct_supx_4_dblt <- all_msc_nosct_supx_4_dblt %>%
-  map2(., pc_list, ~FindNeighbors(.x, dims = 1:.y, verbose = FALSE))
+# Add stage metadata to supx object
+all_msc_nosct_supx_4_dblt <- list(all_msc_nosct_supx_4_dblt, all_msc_filt) %>%
+  pmap(~ {
+    ..2@meta.data %>%
+      dplyr::select(StagePrelimC) %>%
+      AddMetaData(..1, .)
+       })
 
 ```
 
 
-```{r}
-##Using the default resolution - though quite high it may help find clusters that contain doublets
-res_list <- list(rep(0.4, length(sample_name_nms)))
-res_list <- res_list
+```{r, eval=T}
 
-all_msc_nosct_supx_4_dblt <-all_msc_nosct_supx_4_dblt %>%
-  map2(., res_list, ~FindClusters(.x, resolution = .y, verbose=F)
-  )
-
+imap(all_msc_nosct_supx_4_dblt, ~DimPlot(.x, group.by = "StagePrelimC") + labs(title = .y))
 ```
 
-Calculate UMAP for soupX corrected objects
-```{r, warning=FALSE, message=FALSE}
-all_msc_nosct_supx_4_dblt <- all_msc_nosct_supx_4_dblt %>%
-  map2(., pc_list, ~RunUMAP(.x, dims = 1:.y, n.components = 3L, verbose=F, seed.use = 532, reduction.key = "umap_soupx_"))
+FARM CODE
+```{r, eval=TF}
+## write out seurat bpcells object files for normalization processing in farm
+imap(all_msc_nosct_supx_4_dblt, ~saveRDS(.x, paste0("data/processed/Pf/",.y,"/seu_obj/filt_seu_supx.RDS")))
+```
 
+!!!NB - FARM CODE - DONT DELETE
+```{r, eval=T}
+gogo()
+## Run SNORM on farm like below
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_supx.RDS" --o_file_name "filt_seu_norm_supx.RDS" --umap_name "UMAP_F_S_NORM" --hvg 500 --cluster_resoln 0.1 --resume
 ```
 
 
-```{r}
-# rm(all_msc_nosct_supx_4_dblt)
+Read in seurat objects processed in farm
+```{r, message=F, warning=F}
+##Read BPcells matrices
+all_msc_nosct_supx_4_dblt <- list.files("data/processed/", pattern = "^filt_seu_norm_supx.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+  .[sample_name] %>%
+  map(readRDS)
 ```
 
-```{r}
 
-map(all_msc_nosct_supx_4_dblt, DimPlot)
-```
 
 #### Visualize gene count in soup corrected
 ```{r, results='asis'}
@@ -331,8 +355,26 @@ map(all_msc_nosct_supx_4_dblt, ~fp_fn(obj = .x))
 
 ## scDblFinder
 
+
+!!!NB - FARM CODE - DONT DELETE
+```{r, eval=T}
+gogogo()
+## Run sdblfinder on farm
+# nextflow run doubletF.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/scdblfindr.R" --filt_obj "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm.RDS" --spx_obj "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm_supx.RDS" --o_file_name "scdblf_outs.RDS" --resume
+```
+
+Read in seurat objects processed in farm
+```{r, message=F, warning=F}
+##Read BPcells matrices
+scf_outputs <- list.files("data/processed/", pattern = "^scdblf_outs.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+  .[sample_name] %>%
+  map(readRDS)
+```
+
+
 ## Calculate doublets using scDblFinder for soupx adjusted counts
-```{r}
+```{r, eval=F}
 ## scdblfinder better and sct minimally improves perfomance https://github.com/plger/scDblFinder/issues/67 
 #Convert to SCE and subset
 all_msc_nosct_corrected_dblt_sce <- all_msc_nosct_supx_4_dblt %>%
@@ -341,16 +383,23 @@ all_msc_nosct_corrected_dblt_sce <- all_msc_nosct_supx_4_dblt %>%
 ```
 
 scdblfinder cluster
-```{r, message=FALSE}
+```{r, message=FALSE, eval=F}
 ##Doublet removal
 all_msc_nosct_corrected_dblt_clst <- all_msc_nosct_corrected_dblt_sce %>%
   map(. %>% scDblFinder(., clusters = "seurat_clusters", returnType = "table", nfeatures = 500)) #%>%
   # map(. %>% scDblFinder(.))
 ```
 
+scdblfinder stages
+```{r, message=FALSE, eval=F}
+##Doublet removal
+all_msc_nosct_corrected_dblt_stg <- all_msc_nosct_corrected_dblt_sce %>%
+  map(. %>% scDblFinder(., clusters = "StagePrelimC", returnType = "table", nfeatures = 500)) #%>%
+  # map(. %>% scDblFinder(.))
+```
 
 scdblfinder random
-```{r, message=FALSE}
+```{r, message=FALSE, eval=F}
 ##Doublet removal
 all_msc_nosct_corrected_dblt_rand <- all_msc_nosct_corrected_dblt_sce %>%
   map(. %>% scDblFinder(., returnType = "table", nfeatures = 500)) #%>%
@@ -359,7 +408,7 @@ all_msc_nosct_corrected_dblt_rand <- all_msc_nosct_corrected_dblt_sce %>%
 
 
 ## Calculate doublets using scDblFinder for raw counts
-```{r}
+```{r, eval=F}
 ## scdblfinder better and sct minimally improves perfomance https://github.com/plger/scDblFinder/issues/67 
 #Convert to SCE and subset
 all_msc_nosct_dblt_sce <- all_msc_filt %>%
@@ -370,16 +419,23 @@ all_msc_nosct_dblt_sce <- all_msc_filt %>%
 ## scDblFinder
 
 scdblfinder cluster
-```{r, message=FALSE}
+```{r, message=FALSE, eval=F}
 ##Doublet removal
 all_msc_nosct_dblt_clst <- all_msc_nosct_dblt_sce %>%
   map(. %>% scDblFinder(., clusters = "seurat_clusters", returnType = "table", nfeatures = 500)) #%>%
   # map(. %>% scDblFinder(.))
 ```
 
+scdblfinder stages
+```{r, message=FALSE, eval=F}
+##Doublet removal
+all_msc_nosct_dblt_stg <- all_msc_nosct_dblt_sce %>%
+  map(. %>% scDblFinder(., clusters = "StagePrelimC", returnType = "table", nfeatures = 500)) #%>%
+  # map(. %>% scDblFinder(.))
+```
 
 scdblfinder random
-```{r, message=FALSE}
+```{r, message=FALSE, eval=F}
 ##Doublet removal
 all_msc_nosct_dblt_rand <- all_msc_nosct_dblt_sce %>%
   map(. %>% scDblFinder(., returnType = "table", nfeatures = 500)) #%>%
@@ -423,12 +479,12 @@ all_msc_nosct_dblt_rand <- all_msc_nosct_dblt_sce %>%
 
 Format the scdblfinder outputs and merge before adding to seurat object as metadata
 
-```{r, message=FALSE}
+```{r, message=FALSE, eval=F}
 
-scf_outputs <- list(all_msc_nosct_corrected_dblt_clst, all_msc_nosct_corrected_dblt_rand, all_msc_nosct_dblt_clst, all_msc_nosct_dblt_rand) %>%
+scf_outputs <- list(all_msc_nosct_corrected_dblt_clst, all_msc_nosct_corrected_dblt_stg, all_msc_nosct_corrected_dblt_rand, all_msc_nosct_dblt_clst, all_msc_nosct_dblt_stg, all_msc_nosct_dblt_rand) %>%
   pmap(~ {
     spx <- list(..1, ..2, ..3, ..4)
-    pmap(list(spx, list("_supx_norm", "_supx_rand", "_norm", "_rand")), ~ {
+    pmap(list(spx, list("_supx_norm", "_supx_stg", "_supx_rand", "_norm", "_stg", "_rand")), ~ {
       tbl <- data.frame(..1[,c("score", "class", "type")]) %>% 
         filter(type == "real") %>%
         select(score, class) %>%
@@ -457,7 +513,7 @@ pw_scf_comp_nms <- map(pw_scf_comp, ~{paste0(.x[[1]], '_VS_', .x[[2]])})
 
 a <- map(scf_outputs, ~{
   tbl = .x
-  map(pw_scf_comp, ~{chisq.test(tbl[,.x[[1]]], tbl[,.x[[2]]])[c('statistic', 'p.value')]} %>% as.data.frame %>%  rownames_to_column('test') ) %>%  
+  map(pw_scf_comp, ~{chisq.test(tbl[,.x[[1]]], tbl[,.x[[2]]])[c('statistic', 'p.value')]} %>% base::as.data.frame() %>%  rownames_to_column('test') ) %>%  
     set_names(pw_scf_comp_nms) %>% 
     bind_rows(., .id = "comps")
 }) %>% 
@@ -517,7 +573,7 @@ all_msc_w_dblts  %>%
     FeaturePlot(.x, features = 'scf_score_norm', pt.size = 0.2)
     DimPlot(.x, group.by = 'seurat_clusters', label = T)
     
-    #DimPlot(.x, group.by = 'StagePrelim', label = T)
+    #DimPlot(.x, group.by = 'StagePrelimC', label = T)
     
   })
 
@@ -551,8 +607,9 @@ plot_ly(data = as.data.frame(all_msc_w_dblts[[4]]@reductions[["umap"]]@cell.embe
 ```
 
 ```{r}
-counts_msc <- map(all_msc_filt, ~.x@assays$RNA@counts)
-genes_msc <- map(all_msc_filt, ~rownames(.x@assays$RNA))
+# counts_msc <- map(all_msc_filt, ~.x[['RNA']]$counts)
+counts_msc <- map(all_msc_filt, ~as(.x[["RNA"]]$counts, Class = "dgCMatrix"))
+genes_msc <- map(all_msc_filt, ~rownames(.x[['RNA']]$counts))
 
 ## doublet rate 0.8% (0.008) for every 1000 recovered cells - calculated as recommended https://kb.10xgenomics.com/hc/en-us/articles/360054599512-What-is-the-cell-multiplet-rate-when-using-the-3-CellPlex-Kit-for-Cell-Multiplexing
 
@@ -627,6 +684,14 @@ print('EOF python')
 
 ```
 
+
+```{r}
+## remove to save space
+rm(counts_msc)
+rm(genes_msc)
+# gogogo()
+```
+
 ```{r}
 
 scrublet_o <- pmap(list(all_msc_w_dblts, py$db_scores_ls, py$prd_db_ls), ~data.frame('bcode'= colnames(..1), 'scrub_scores'=..2, 'scrub_doublet'=..3))
@@ -695,7 +760,7 @@ dbt_methods_optimum <- c("scf_class_supx_rand", "scrub_doublet")
 
 ```{r, warning=FALSE, message=FALSE, fig.width=14, fig.height= 4}
 
-map(all_msc_w_dblts, ~.x@meta.data %>% ggplot(aes(x = seurat_clusters, y= sim_lab1, color = strain_gt)) + geom_boxplot() + geom_hline(yintercept = 0.85) + facet_wrap(. ~ StagePrelim, nrow = 1, scales = "free_x"))
+map(all_msc_w_dblts, ~.x@meta.data %>% ggplot(aes(x = seurat_clusters, y= sim_lab1, color = strain_gt)) + geom_boxplot() + geom_hline(yintercept = 0.85) + facet_wrap(. ~ StagePrelimC, nrow = 1, scales = "free_x"))
 ```
 
 
@@ -704,7 +769,7 @@ map(all_msc_w_dblts, ~.x@meta.data %>% ggplot(aes(x = seurat_clusters, y= sim_la
 all_msc_w_dblts <- map(all_msc_w_dblts, ~{
   .x@meta.data %>%
     rownames_to_column('bcodes') %>%
-    mutate(StagePrelimAll = ifelse(is.na(StagePrelim), "Unassigned", StagePrelim)) %>%
+    # mutate(StagePrelimC = ifelse(is.na(StagePrelimC), "Unassigned", StagePrelimC)) %>%
     group_by(stage_lab1) %>%
     mutate(lo_outlr_thresh = quantile(sim_lab1, probs = 0.25) - IQR(sim_lab1) * 1.5,
            lo_outlrs = sim_lab1 <= lo_outlr_thresh,
@@ -714,7 +779,7 @@ all_msc_w_dblts <- map(all_msc_w_dblts, ~{
            # hetero_dblts = case_when(stage_lab1 %in% c("Male", "Female", "Unassigned") & strain_gt_dbt_prop >= 0.05 & lo_outlrs == T ~ "Doublet",
            #                          T ~ "Singlet")
            )   %>%
-    dplyr::select(bcodes, StagePrelimAll, lo_outlr_thresh, lo_outlrs, hetero_dblts) %>%
+    dplyr::select(bcodes, lo_outlr_thresh, lo_outlrs, hetero_dblts) %>%
     column_to_rownames('bcodes') %>%
     AddMetaData(.x, .) 
     
@@ -731,7 +796,7 @@ map(all_msc_w_dblts, ~{
     ggplot(aes(x = seurat_clusters, y= sim_lab1, color = hetero_dblts)) + 
     geom_boxplot() + 
     geom_hline(yintercept = 0.85) + 
-    facet_wrap(. ~ StagePrelimAll, nrow = 1, scales = "free_x")
+    facet_wrap(. ~ StagePrelimC, nrow = 1, scales = "free_x")
     })
 
 ```
@@ -766,7 +831,7 @@ map(all_msc_w_dblts, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x
 
 map(all_msc_w_dblts, ~.x@meta.data %>%
       filter(strain_gt_dbt_prop > 0.05) %>% 
-      dplyr::count(seurat_clusters, strain_gt, StagePrelimAll,lo_outlrs,strain_gt_dbt_prop)  %>%
+      dplyr::count(seurat_clusters, strain_gt, StagePrelimC,lo_outlrs,strain_gt_dbt_prop)  %>%
       group_by(seurat_clusters) %>%
       filter(strain_gt == "Doublet")
     )  
@@ -778,7 +843,7 @@ map(all_msc_w_dblts, ~.x@meta.data %>%
 
 all_msc_w_dblts[[3]]@meta.data %>%
       filter(seurat_clusters == "5") %>% 
-      select(sim_lab1,StagePrelimAll, strain_gt_dbt_prop, lo_outlr_thresh, lo_outlrs, hetero_dblts)
+      select(sim_lab1,StagePrelimC, strain_gt_dbt_prop, lo_outlr_thresh, lo_outlrs, hetero_dblts)
  
 
 ```
@@ -787,14 +852,14 @@ all_msc_w_dblts[[3]]@meta.data %>%
 ```{r}
 
 all_msc_w_dblts[[3]]@meta.data %>%
-      count(StagePrelimAll, lo_outlr_thresh)
+      count(StagePrelimC, lo_outlr_thresh)
  
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_w_dblts, ~DimPlot(.x, dims = c(1,2), group.by = "StagePrelimAll", reduction = "umap_soupx"))
+map(all_msc_w_dblts, ~DimPlot(.x, dims = c(1,2), group.by = "StagePrelimC", reduction = "umap_soupx"))
 ```
 
 
@@ -920,7 +985,7 @@ gbox_thme <- theme(axis.text=element_text(size=14),
 
 ```{r, fig.height = 3.5, fig.width = 15}
 
-gbx_fn <- function(obj = all_msc_w_dblts[[1]], mks = dbt_methods_gtyp, nrws = ceiling(length(dbt_methods_gtyp)/5), lgpos = "bottom", xgrp = "StagePrelim") {
+gbx_fn <- function(obj = all_msc_w_dblts[[1]], mks = dbt_methods_gtyp, nrws = ceiling(length(dbt_methods_gtyp)/5), lgpos = "bottom", xgrp = "StagePrelimC") {
   list(mks) %>%
   pmap(.,~{
     obj@meta.data %>%
@@ -941,7 +1006,7 @@ gbx_fn <- function(obj = all_msc_w_dblts[[1]], mks = dbt_methods_gtyp, nrws = ce
 
 ```{r, fig.height = 8, fig.width = 15}
 
-map(all_msc_w_dblts, ~gbx_fn(obj = .x, mks = dbt_methods_gtyp, nrws = ceiling(length(dbt_methods_gtyp)/4), xgrp = "StagePrelim"))
+map(all_msc_w_dblts, ~gbx_fn(obj = .x, mks = dbt_methods_gtyp, nrws = ceiling(length(dbt_methods_gtyp)/4), xgrp = "StagePrelimC"))
 ```
 
 
@@ -957,6 +1022,7 @@ map(all_msc_w_dblts, ~gbx_fn(obj = .x, mks = dbt_methods_gtyp[!dbt_methods_gtyp 
 
 map(all_msc_w_dblts, ~gbx_fn(obj = .x, mks = dbt_methods_gtyp, nrws = ceiling(length(dbt_methods_gtyp)/3), xgrp = "seurat_clusters"))
 ```
+
 
 ##### Boxplots gene count vs doublet status stratified by Strain_DN
 
@@ -1130,8 +1196,8 @@ cell_qc_objs<- list(all_msc_w_dblts, mt_filt) %>%
   
   cell_qc_filt_tbl <- ..1@meta.data %>%
   mutate('QC_reason' =case_when(strain_gt == "Negative" ~ 'sc_neg', 
-                                nFeature_RNA<=gn_lci_cl | nCount_RNA <= rna_lci_cl ~ 'lo_gn_cnt', 
-                                nFeature_RNA>=gn_uci_cl | nCount_RNA >= rna_uci_cl ~ 'hi_gn_cnt', 
+                                nFeature_RNA<=gn_lci_cl_seu | nCount_RNA <= rna_lci_cl_seu ~ 'lo_gn_cnt', 
+                                nFeature_RNA>=gn_uci_cl_seu | nCount_RNA >= rna_uci_cl_seu ~ 'hi_gn_cnt', 
                                 percent.mt>=..2 ~ 'hi_mtp',
                                 strain_gt == 'Doublet' & scf_class_supx_rand == 'Doublet' & scrub_doublet == 'Doublet' ~ 'ss_db', 
                                 strain_gt == 'Doublet' & scf_class_supx_rand == 'Doublet' & scrub_doublet == 'Singlet' ~ 'ss_db', 
@@ -1141,10 +1207,10 @@ cell_qc_objs<- list(all_msc_w_dblts, mt_filt) %>%
                                 strain_gt!= 'Doublet' & scf_class_supx_rand == 'Doublet' & scrub_doublet == 'Singlet' ~ 'stg_db',
                                 strain_gt!= 'Doublet' & scf_class_supx_rand == 'Singlet' & scrub_doublet == 'Doublet' ~ 'stg_db', 
                                 strain_gt!= 'Doublet' & scf_class_supx_rand == 'Singlet' & scrub_doublet == 'Singlet' ~ 'pass')) %>%
-  dplyr::select(QC_reason, StagePrelim)
+  dplyr::select(QC_reason, StagePrelimC)
 
 ##tabulate cells  
-cell_qc_filt_tbl %>% dplyr::count(StagePrelim, QC_reason) %>% print()
+cell_qc_filt_tbl %>% dplyr::count(StagePrelimC, QC_reason) %>% print()
 
 ##Order the QC filt reasons with the lowest prevalent to the highest prevalent 
 cell_qc_filt_lvls <- cell_qc_filt_tbl %>% dplyr::count(QC_reason) %>% arrange(desc(n)) %>% pull(QC_reason)
@@ -1243,7 +1309,7 @@ mt_pc_plot_no_col <- list(map(cell_qc_objs, ~.x[[1]]), mt_filt) %>%
 
 mt_pc_plot <- list(map(cell_qc_objs, ~.x[[1]]), mt_filt) %>%
   pmap(., ~{ 
-    print(mt_plt(..1, ..2, gp_var='StagePrelim', gp_cols = sp_fld_colors))
+    print(mt_plt(..1, ..2, gp_var='StagePrelimC', gp_cols = sp_fld_colors))
     print(mt_plt(..1, ..2))
     })
 # mt_pc_plot
@@ -1307,7 +1373,36 @@ map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(strain_gt, scf_class_norm, s
 #   mutate(freq = round(n / sum(n), 3))) 
 ```
 
+```{r}
 
+##Remove souporcell doublet
+saveRDS(all_msc_w_dblts, "data/processed/Pf/all_msc_w_dblts.RDS")
+
+```
+
+
+```{r, eval=F}
+
+##Remove souporcell doublet
+all_msc_w_dblts <- readRDS("data/processed/Pf/all_msc_w_dblts.RDS")
+
+```
+
+
+```{r}
+
+## Write out file with doublets for sk25
+saveRDS(all_msc_w_dblts[c("MSC33", "MSC57")] %>% lapply(., function(x) x@meta.data), "data/processed/Pf/all_msc_w_dblts_m33_m57.RDS")
+
+```
+
+
+```{r}
+
+## Write out metadata
+saveRDS(all_msc_w_dblts %>% lapply(., function(x) x@meta.data), "data/processed/Pf/all_msc_w_dblts_mdata.RDS")
+
+```
 
 #### Remove doublets
 ##### Remove souporcell doublets and negatives
@@ -1338,7 +1433,7 @@ all_msc_filt_no_dblts <- all_msc_w_dblts %>%
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.3) %>% count(seurat_clusters, scf_class_norm_dbt_prop, scrub_doublet_dbt_prop, scf_class_norm_dbt_nums, scrub_doublet_dbt_nums))
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.1) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop,   scf_class_norm_dbt_nums, scrub_doublet_dbt_nums))
 
 ```
 
@@ -1350,6 +1445,35 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.
 map(all_msc_filt_no_dblts, ~.@meta.data %>% dplyr::count(scf_class_norm, scrub_doublet))
 
 ```
+##### Check doublet clusters
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop > 0.1))
+
+```
+
+
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(!((scf_class_norm_dbt_prop > 0.1 & scf_class_rand_dbt_prop > 0.1) | scrub_doublet_dbt_prop > 0.1)) %>% rownames_to_column("bcode") %>% mutate(across(c(scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop), ~round(., 2))) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop))
+
+```
+
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1))
+
+```
+
+```{r, message=FALSE}
+# thogoo()
+```
 
 ##### Remove remaining doublets
 
@@ -1357,8 +1481,22 @@ map(all_msc_filt_no_dblts, ~.@meta.data %>% dplyr::count(scf_class_norm, scrub_d
 ##Seurat object
 ##Remove doublets
 
+# all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
+#     # map(. %>% subset(., subset = scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1))
+#     map(. %>% subset(., subset = scf_class_norm == "Singlet" & !((scf_class_norm_dbt_prop > 0.1 & scf_class_rand_dbt_prop > 0.1) | scrub_doublet_dbt_prop > 0.1)))
+  # map(. %>% subset(., subset = scf_class_supx_rand == "Singlet" & scrub_doublet == 'Singlet'))
+
+```
+
+```{r}
+##Seurat object
+##Remove doublets
+
 all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
-    map(. %>% subset(., subset = scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.3))
+    # map(. %>% subset(., subset = scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1)) %>%
+    map(. %>% subset(., subset = scf_class_norm == "Singlet")) %>%
+    map(. %>% subset(., subset = scf_class_norm_dbt_prop < 0.1 | scf_class_rand_dbt_prop < 0.1)) %>%
+    map(. %>% subset(., subset = scrub_doublet_dbt_prop < 0.1))
   # map(. %>% subset(., subset = scf_class_supx_rand == "Singlet" & scrub_doublet == 'Singlet'))
 
 ```
@@ -1369,7 +1507,7 @@ map(all_msc_filt_no_dblts, dim)
 
 ```
 
-```{r, warning=FALSE, message=FALSE, fig.width=14, fig.height= 4}
+```{r, warning=FALSE, message=FALSE, fig.width=14, fig.height= 4, eval=FALSE}
 
 map(all_msc_w_dblts, ~{
   
@@ -1399,8 +1537,34 @@ for (i in names(all_msc_filt_no_dblts)) {
 }
 
 ```
+FARM CODE
+```{r, eval=F}
+##write out for normalization processing in farm
 
-```{r}
+for (i in 1:length(sample_name)) {
+# for (i in 32:33) {
+  
+  ##Transfers
+  ##souporcell genotyping files
+  saveRDS(all_msc_filt[[sample_name[i]]],
+    paste0('data/processed/Pf/', sample_name[i], '/seu_obj/filt_seu_sct.RDS')
+    )
+  
+}
+
+
+```
+
+Read in seurat objects processed in farm
+```{r, message=F, warning=F, eval=F}
+##Read BPcells matrices
+all_msc_filt <- list.files("data/processed/", pattern = "filt_seu_norm.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+  .[sample_name] %>%
+  map(readRDS)
+```
+
+```{r, eval=F}
 
 all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
   map(. %>% seurat_norm_stand()
@@ -1410,14 +1574,14 @@ all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
 
 #### Elbow plot for PC determination
 
-```{r, results='asis'}
+```{r, results='asis', eval=F}
 ##adding clusters that are used to display mitochondrial count
 map(all_msc_filt_no_dblts, ElbowPlot)
 ```
 
 
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval=F}
 # pc_list <-list(5L,4L,4L, 5L, 5L, 5L)
 # # res_list <- c(0.16,0.12,0.12,0.12,0.12)
 # res_list <- c(0.1,0.1,0.12,0.12,0.2,0.2)
@@ -1454,7 +1618,7 @@ list(all_msc_filt_no_dblts, sample_id_lst)  %>%
   purrr::pmap(.,~{
     DimPlot(., reduction = "umap", label = T, pt.size = 0.5)
 
-    VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = "StagePrelim",idents = NULL, pt.size = 0.01)
+    VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = "StagePrelimC",idents = NULL, pt.size = 0.01)
 
   })
 
@@ -1466,7 +1630,7 @@ cln_umap_stg <- list(all_msc_filt_no_dblts, sample_id_lst)  %>%
   purrr::pmap(.,  ~ {
 
     
-    p = DimPlot(., reduction = "umap", , pt.size = 1,  label = F, repel = T, label.size = 9, group.by = "StagePrelim") +
+    p = DimPlot(., reduction = "umap", , pt.size = 1,  label = F, repel = T, label.size = 9, group.by = "StagePrelimC") +
   scale_color_manual(name= 'Stage', values = sp_fld_colors) +
       theme_void()+
       theme(#axis.text=element_text(size=18), 
@@ -1496,7 +1660,7 @@ cln_umap_stg <- list(all_msc_filt_no_dblts, sample_id_lst)  %>%
 ### Violin plot gene expression levels
 ```{r, fig.height=4.5, fig.width=6}
 cln_vln_stg <- map(all_msc_filt_no_dblts,~.x %>%
-  VlnPlot(., features = c("nFeature_RNA"), group.by = 'StagePrelim', pt.size = .001) +
+  VlnPlot(., features = c("nFeature_RNA"), group.by = 'StagePrelimC', pt.size = .001) +
   scale_fill_manual(name= 'Stage', values = sp_fld_colors)+
   scale_y_continuous(label=function(y) y / 1000) +
   theme(axis.text.x = element_blank(),
@@ -1599,8 +1763,176 @@ map(all_msc_filt_no_dblts, ~FeaturePlot(., reduction = "umap", features ='percen
 saveRDS(all_msc_filt_no_dblts, 'data/processed/Pf/all_msc_filt_no_dblts.RDS')
 ```
 
-Copy the Qcd barcodes to farm for souporcell
 ```{r, results='asis'}
+
+all_msc_filt_no_dbltsmdata <- map(all_msc_filt_no_dblts, ~..1@meta.data) 
+
+```
+
+
+```{r, results='asis'}
+
+map(all_msc_filt_no_dbltsmdata, ~.x %>% filter(!(Strain_DN %in% c("Doublet", "Negative"))) %>% count(Strain_DN)) 
+
+```
+
+
+```{r, results='asis'}
+
+map(all_msc_filt_no_dbltsmdata, ~.x %>% filter(!(Strain_DN %in% c("Doublet", "Negative"))) %>% count(Strain_DN)) 
+
+```
+
+
+```{r, results='asis'}
+
+map(all_msc_filt_no_dbltsmdata, ~.x %>% filter(!(Strain_DN %in% c("Doublet", "Negative"))) %>% count(StagePrelimC)) 
+
+```
+
+
+
+
+```{r, fig.width = 18, fig.height = 4, message=FALSE, warning=FALSE}
+c_stg_shapes = c('Asexual' = 16 , 'Male' = 3,  'Female' = 6)
+c_stg_cols= c('Asexual' = "#D7B7C7", 'Male' = "#C4CAA4", 'Female'="#6289A9", 'Developing' = "#C9F6E1", 'Field unlabelled'="lightgrey")
+
+
+ss_bar_plt <-list(all_msc_filt_no_dbltsmdata, names(all_msc_filt_no_dbltsmdata))  %>% 
+  purrr::pmap(.,~{
+  a_tbl <- ..1 %>%
+    mutate(stage_afm = case_when(str_detect(StagePrelimC, 'ring|troph') ~ 'Asexual', 
+                                     str_detect(StagePrelimC, '\\(male') ~ 'Male', 
+                                     str_detect(StagePrelimC, 'Female') ~ 'Female',
+                                     T ~StagePrelimC),
+            stage_ag = case_when(str_detect(StagePrelimC, 'ring|troph') ~ 'Asexual', 
+                                    str_detect(StagePrelimC, 'ale') ~ 'Gametocyte',
+                                     T ~StagePrelimC)) %>%
+      mutate(across(stage_afm, ~factor(., levels=c('Asexual', 'Female', 'Male', 'Field unlabelled')))) %>%
+      dplyr::count(Strain_DN, stage_afm) 
+  
+  str(a_tbl)
+  
+  ##get stage_ag labels and counts to add to the Strain_DN+stage_afm counts generated above
+  stage_ag_cnt <- ..1 %>%
+    mutate(stage_afm = case_when(str_detect(StagePrelimC, 'ring|troph') ~ 'Asexual', 
+                                     str_detect(StagePrelimC, '\\(male') ~ 'Male', 
+                                     str_detect(StagePrelimC, 'Female') ~ 'Female',
+                                     T ~StagePrelimC),
+            stage_ag = case_when(str_detect(StagePrelimC, 'ring|troph') ~ 'Asexual', 
+                                    str_detect(StagePrelimC, 'ale') ~ 'Gametocyte',
+                                     T ~StagePrelimC)) %>% 
+    dplyr::select(Strain_DN, stage_ag, stage_afm) %>% 
+    add_count(Strain_DN, stage_ag, name = 'stage_ag_n') %>% 
+    distinct(pick(Strain_DN, stage_afm), .keep_all = T) %>% 
+    left_join(a_tbl, ., by =c('Strain_DN', 'stage_afm')) %>% 
+    rename(c('Stage'= stage_afm, 'Counts' =n, 'Strain' = Strain_DN))  
+  
+  str(stage_ag_cnt)
+  
+    b_plt <- stage_ag_cnt %>%
+      # ggplot(., aes(x = Stage, y = Counts, fill = Stage, color=stage_ag_n<30)) +
+      ggplot(., aes(x = Stage, y = Counts, fill = Stage)) +
+      geom_col(position = position_dodge2()) + #width=0.4, position = position_dodge(width=0.5)
+      geom_text(aes(label=Counts), hjust=0.5, vjust= -0.3, position = position_dodge(width = .9), size = 7, show.legend = F, fontface ='bold', colour='black')+
+      scale_fill_manual(values = c_stg_cols) + #'Asexual' = "#FFE5B4", 'Male' = "#BFD7B5", 'Female'="#8ab6d6"
+      # scale_color_manual(values = c('FALSE' = "white", 'TRUE' = "blue")) +
+  geom_tile(aes(x = Stage, y = -10, fill = Stage, height = 14)) +
+  facet_wrap( Strain ~ ., nrow = 1) +
+      scale_y_continuous(expand = expansion(mult = c(0.01, 0.15))) +
+      scale_x_discrete(expand = expansion(add = c(1, 1))) +
+      theme_classic() +
+  labs( y = 'Counts', title = ..2)+
+      theme(
+        axis.text.y  = element_text(size = 22),
+        axis.title.y  = element_text(size = 22, face = "bold"),
+        axis.title.x = element_blank(),
+        # axis.title = element_text(size = 18, face = "bold"),
+        legend.text = element_text(size = 22),
+        legend.title = element_text(size = 22, face = "bold"),
+        legend.position="bottom",
+        axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        strip.text =element_text(size=20,face="bold", colour = 'black'),
+        panel.border=element_rect(colour="black",fill='transparent')
+      )+
+      guides(color = F)
+    print(b_plt)
+    return(b_plt)
+})
+
+
+```
+
+
+```{r, fig.width = 18, fig.height = 4, message=FALSE, warning=FALSE, eval=F}
+
+
+ss_bar_plt <-list( strn_c_mdata)  %>% 
+  purrr::pmap(.,~{
+  a_tbl <- ..1 %>%
+      mutate(across(stage_afm, ~factor(., levels=c('Asexual', 'Female', 'Male', 'Developing', 'Unassigned')))) %>%
+      dplyr::count(Strain_DN, stage_afm, .drop = FALSE) 
+  
+  ##get stage_ag labels and counts to add to the Strain_DN+stage_afm counts generated above
+  stage_ag_cnt <- ..1 %>% 
+    dplyr::select(Strain_DN, stage_ag, stage_afm) %>% 
+    add_count(Strain_DN, stage_ag, name = 'stage_ag_n') %>% 
+    distinct(pick(Strain_DN, stage_afm), .keep_all = T) %>% 
+    left_join(a_tbl, ., by =c('Strain_DN', 'stage_afm')) %>% 
+    rename(c('Stage'= stage_afm, 'Counts' =n, 'Strain' = Strain_DN))  
+  
+  print(stage_ag_cnt)
+  
+    b_plt <- stage_ag_cnt %>%
+      # ggplot(., aes(x = Stage, y = Counts, fill = Stage, color=stage_ag_n<30)) +
+      ggplot(., aes(x = Stage, y = Counts, fill = Stage)) +
+      geom_col(position = position_dodge2()) + #width=0.4, position = position_dodge(width=0.5) 
+      geom_text(aes(label=Counts), hjust=0.5, vjust= -0.3, position = position_dodge(width = .9), size = 7, show.legend = F, fontface ='bold', colour='black')+
+      scale_fill_manual(values = c_stg_cols) + #'Asexual' = "#FFE5B4", 'Male' = "#BFD7B5", 'Female'="#8ab6d6"
+      # scale_color_manual(values = c('FALSE' = "white", 'TRUE' = "blue")) +
+  geom_tile(aes(x = Stage, y = -10, fill = Stage, height = 14)) +
+  facet_wrap( Strain ~ ., nrow = 1) +
+      scale_y_continuous(expand = expansion(mult = c(0.01, 0.15))) +
+      scale_x_discrete(expand = expansion(add = c(1, 1))) +
+      theme_classic() +
+  labs( y = 'Counts')+
+      theme(
+        axis.text.y  = element_text(size = 22),
+        axis.title.y  = element_text(size = 22, face = "bold"),
+        axis.title.x = element_blank(),
+        # axis.title = element_text(size = 18, face = "bold"),
+        legend.text = element_text(size = 22),
+        legend.title = element_text(size = 22, face = "bold"),
+        legend.position="bottom",
+        axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        strip.text =element_text(size=20,face="bold", colour = 'black'),
+        panel.border=element_rect(colour="black",fill='transparent')
+      )+ 
+      guides(color = F)
+    print(b_plt)
+    return(b_plt)
+})
+
+
+```
+
+write the Qcd barcodes for souporcell
+```{r, results='asis', eval=T}
+
+imap(all_msc_filt_no_dblts, ~{
+  system(paste0('mkdir data/processed/Pf/',.y,'/soupc_GE_postQC/'))
+  write(colnames(.x), paste0('data/processed/Pf/',.y,'/soupc_GE_postQC/barcodes.tsv'))
+  system(paste0('gzip -f data/processed/Pf/',.y,'/soupc_GE_postQC/barcodes.tsv'))
+  
+})
+
+```
+
+
+Copy the Qcd barcodes to farm for souporcell
+```{r, results='asis', eval=F}
 
 imap(all_msc_filt_no_dblts, ~{
   system(paste0('mkdir /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',.y,'/soupc_GE_postQC/'))
